Fix video cutoff <800px width

--- a/src/styles/video_grid.css
+++ b/src/styles/video_grid.css
@@ -21,16 +21,16 @@
 .ct-chat {
   width: calc(100% - 240px);
 }
-@media (max-width: 800px) {
-  /* #remote-vid-wrapper {
+/* @media (max-width: 800px) {
+  #remote-vid-wrapper {
           top: 2%;
           height: 92%;
           bottom: 6%;
-        } */
+        }
   .ct-chat {
     width: 100%;
   }
-}
+} */
 
 div#remote-div {
   position: relative;
